--- a/Styling_React_Components/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/Styling_React_Components/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,14 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+/* We are going to add the invalid class dynamically */
+
+.form-control.invalid input {
+  border-color: red;
+  background: #ffd7d7;
+}
+
+.form-control.form-control.invalid label {
+  color: red;
+}
